# esp-ws-client

./: .gitignore  CMakeLists.txt  partitions.csv
main/: CMakeLists.txt  main.c  routes.c  wifi.c
main/assets/: index.html
main/include/main/: routes.h  wifi.h
